(chore): install vercel ai sdk

--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"ai": "^2.0.1",
+		"openai-edge": "^1.0.0"
+	}
 }
